LangChainチートシート追加 & test.ipynb更新
- langchain_cheatsheet.md: 電車で覚える用のまとめを作成
- test.ipynb: ChatPromptTemplate, MessagesPlaceholderの例を追加

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 107,
    "id": "38aee237",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='こんにちは、ジョンさん！お会いできて嬉しいです。何かお手伝いできることはありますか？' additional_kwargs={} response_metadata={'finish_reason': 'STOP', 'model_name': 'gemini-2.0-flash-001', 'safety_ratings': [], 'model_provider': 'google_genai'} id='lc_run--019b5f68-9cfc-7911-a66e-79f0dd6b0786-0' usage_metadata={'input_tokens': 13, 'output_tokens': 21, 'total_tokens': 34, 'input_token_details': {'cache_read': 0}}\n"
+      "content='こんにちは、ジョンさん！お会いできて嬉しいです。何かお手伝いできることはありますか？' additional_kwargs={} response_metadata={'finish_reason': 'STOP', 'model_name': 'gemini-2.0-flash-001', 'safety_ratings': [], 'model_provider': 'google_genai'} id='lc_run--019b6428-4e7f-7ad1-83a0-ecb3584f03ae-0' usage_metadata={'input_tokens': 13, 'output_tokens': 21, 'total_tokens': 34, 'input_token_details': {'cache_read': 0}}\n"
      ]
     }
    ],
@@ -457,8 +457,282 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "aaa14fda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages([\"\"\"以下の料理のレシピを考えてください。料理名 {dish}\"\"\"\n",
+    "])\n",
+    "\n",
+    "prompt_value = prompt.invoke({\"dish\": \"カレー\"})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "c114508b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== 文字列として表示 ===\n",
+      "Human: 以下の料理のレシピを考えてください。料理名 カレー\n",
+      "\n",
+      "=== メッセージとして表示 ===\n",
+      "[HumanMessage(content='以下の料理のレシピを考えてください。料理名 カレー', additional_kwargs={}, response_metadata={})]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ChatPromptValue の中身を確認する方法\n",
+    "print(\"=== 文字列として表示 ===\")\n",
+    "print(prompt_value.to_string())\n",
+    "\n",
+    "print(\"\\n=== メッセージとして表示 ===\")\n",
+    "print(prompt_value.to_messages())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "e5dbd4c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", \"あなたは料理の専門家です。\"),\n",
+    "    (\"human\", \"以下の料理のレシピを考えてください。料理名 {dish}\")\n",
+    "])\n",
+    "\n",
+    "prompt_value = prompt.invoke({\"dish\": \"オムライス\"})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "25d6d353",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== 文字列として表示 ===\n",
+      "System: あなたは料理の専門家です。\n",
+      "Human: 以下の料理のレシピを考えてください。料理名 オムライス\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"=== 文字列として表示 ===\")\n",
+    "print(prompt_value.to_string())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "91dbef02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== 文字列として表示 ===\n",
+      "System: あなたは料理の専門家です。\n",
+      "Human: 以下の料理のレシピを考えてください。料理名 オムライス\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.prompts import MessagesPlaceholder\n",
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "#from langchain_core.tools import tool\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", \"あなたは料理の専門家です。\"),\n",
+    "    MessagesPlaceholder(variable_name=\"history\", optional=True),\n",
+    "    (\"human\", \"以下の料理のレシピを考えてください。料理名 {dish}\")\n",
+    "])\n",
+    "\n",
+    "prompt_value = prompt.invoke({\"dish\": \"オムライス\"})\n",
+    "print(\"=== 文字列として表示 ===\")\n",
+    "print(prompt_value.to_string())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "23f82dcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_value = prompt.invoke({\n",
+    "    \"dish\": \"カレー\",\n",
+    "    \"history\": [\n",
+    "        (\"human\", \"カレーのレシピを教えて\"),\n",
+    "        (\"ai\", \"カレーのレシピは玉ねぎを炒めて...\"),\n",
+    "        (\"human\", \"辛くするには？\"),\n",
+    "        (\"ai\", \"スパイスを増やすと辛くなります\"),\n",
+    "        (\"human\", \"激辛が好きなんだよ\"),\n",
+    "    ]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "d7323fa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== 文字列として表示 ===\n",
+      "はい、承知いたしました。激辛好きのためのカレーレシピですね！🔥\n",
+      "\n",
+      "## 激辛マニア向け！悶絶必至の地獄カレー\n",
+      "\n",
+      "**料理名：** 悶絶地獄カレー\n",
+      "\n",
+      "**コンセプト：** ただ辛いだけでなく、旨味と香りが複雑に絡み合った、奥深い激辛カレーを目指します。一口食べたら最後、脳天を突き抜けるような辛さと、後を引く旨さにハマること間違いなし！\n",
+      "\n",
+      "**材料（4人分）：**\n",
+      "\n",
+      "*   **肉：** 豚バラブロック 300g (旨味とコクを出すため。鶏肉や牛肉でもOK)\n",
+      "*   **野菜：**\n",
+      "    *   玉ねぎ 大2個 (飴色になるまで炒めるのがポイント！)\n",
+      "    *   ニンニク 3かけ (みじん切り)\n",
+      "    *   生姜 2かけ (みじん切り)\n",
+      "    *   トマト缶 1缶 (カットトマト)\n",
+      "    *   ピーマン 2個 (彩りと風味)\n",
+      "    *   ハラペーニョ 3本 (輪切り。種ごと！)\n",
+      "*   **スパイス：**\n",
+      "    *   クミン 小さじ2\n",
+      "    *   コリアンダー 小さじ2\n",
+      "    *   ターメリック 小さじ1\n",
+      "    *   レッドペッパー 大さじ3～ (お好みで調整！最初は少なめから)\n",
+      "    *   カイエンペッパー 小さじ1～ (さらに辛さを追加！)\n",
+      "    *   ガラムマサラ 大さじ1\n",
+      "    *   ブラックペッパー 粗挽き 適量\n",
+      "    *   チリパウダー 大さじ2\n",
+      "*   **その他：**\n",
+      "    *   カレールー 辛口 1箱 (ベースの味を決定)\n",
+      "    *   コンソメキューブ 1個\n",
+      "    *   ウスターソース 大さじ2\n",
+      "    *   醤油 大さじ1\n",
+      "    *   砂糖 小さじ1/2 (隠し味)\n",
+      "    *   ローリエ 2枚\n",
+      "    *   サラダ油 大さじ3\n",
+      "    *   水 600ml\n",
+      "    *   ご飯 適量\n",
+      "\n",
+      "**激辛ポイント：**\n",
+      "\n",
+      "*   ハラペーニョ、レッドペッパー、カイエンペッパー、チリパウダーの4種類の唐辛子をブレンド！\n",
+      "*   仕上げにチリオイルやデスソースを追い辛しても◎\n",
+      "\n",
+      "**作り方：**\n",
+      "\n",
+      "1.  **下準備：**\n",
+      "    *   豚バラブロックは2cm角に切る。\n",
+      "    *   玉ねぎは薄切りにする。\n",
+      "    *   ニンニク、生姜、ハラペーニョはみじん切りにする。\n",
+      "    *   ピーマンは種を取り、乱切りにする。\n",
+      "2.  **炒め：**\n",
+      "    *   鍋にサラダ油を熱し、ニンニク、生姜を炒める。香りが立ったら玉ねぎを加え、飴色になるまでじっくり炒める。(焦げ付かないように注意！)\n",
+      "    *   豚バラブロックを加え、表面に焼き色がつくまで炒める。\n",
+      "3.  **煮込み：**\n",
+      "    *   トマト缶、水、コンソメキューブ、ローリエを加え、沸騰したらアクを取り、弱火で20分ほど煮込む。\n",
+      "    *   ハラペーニョ、ピーマンを加え、さらに10分煮込む。\n",
+      "4.  **スパイス投入：**\n",
+      "    *   火を止め、カレールーを割り入れ、溶けるまで混ぜる。\n",
+      "    *   クミン、コリアンダー、ターメリック、レッドペッパー、カイエンペッパー、チリパウダー、ガラムマサラ、ブラックペッパー、ウスターソース、醤油、砂糖を加え、よく混ぜる。\n",
+      "5.  **仕上げ：**\n",
+      "    *   再び弱火にかけ、とろみがつくまで煮込む。(焦げ付かないように時々混ぜる)\n",
+      "    *   味見をし、辛さや塩気を調整する。\n",
+      "    *   ご飯と一緒に盛り付け、お好みでパクチーやフライドオニオンを添える。\n",
+      "\n",
+      "**ポイント：**\n",
+      "\n",
+      "*   玉ねぎを飴色になるまで炒めることで、カレーにコクと甘みが出ます。焦げ付かないように弱火でじっくり炒めましょう。\n",
+      "*   スパイスは焦げやすいので、必ず火を止めてから加えてください。\n",
+      "*   辛さはお好みで調整してください。最初はレッドペッパーを少なめに入れ、味を見ながら増やしていくのがおすすめです。\n",
+      "*   煮込む時間は、肉の柔らかさや野菜の食感で調整してください。\n",
+      "*   仕上げにレモン汁やライム汁を加えると、さっぱりとした風味になります。\n",
+      "\n",
+      "**注意：**\n",
+      "\n",
+      "*   非常に辛いので、お子様や辛いものが苦手な方は絶対に食べないでください。\n",
+      "*   調理中は換気をしっかり行い、スパイスが目に入らないように注意してください。\n",
+      "*   胃腸の弱い方は、少量から試してください。\n",
+      "\n",
+      "**より辛くするために：**\n",
+      "\n",
+      "*   ハバネロやブートジョロキアなどの激辛唐辛子を追加する。\n",
+      "*   チリオイルやデスソースを仕上げにかける。\n",
+      "*   山椒や花椒を加えて、痺れる辛さをプラスする。\n",
+      "\n",
+      "このカレーは、まさに地獄の入り口！ 🔥 覚悟して挑戦してください！ 🍛\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"=== 文字列として表示 ===\")\n",
+    "print(llm.invoke(prompt_value).content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "bdb95eb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValidationError",
+     "evalue": "1 validation error for ChatGoogleGenerativeAI\n  Value error, API key required for Gemini Developer API. Provide api_key parameter or set GOOGLE_API_KEY/GEMINI_API_KEY environment variable. [type=value_error, input_value={'model': 'gemini-2.0-fla...01', 'model_kwargs': {}}, input_type=dict]\n    For further information visit https://errors.pydantic.dev/2.12/v/value_error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValidationError\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[106]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mprompts\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ChatPromptTemplate\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m# 準備\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m llm = \u001b[43mChatGoogleGenerativeAI\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mgemini-2.0-flash-001\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      9\u001b[39m prompt = ChatPromptTemplate.from_messages([\n\u001b[32m     10\u001b[39m     (\u001b[33m\"\u001b[39m\u001b[33msystem\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mあなたは料理の専門家です\u001b[39m\u001b[33m\"\u001b[39m),\n\u001b[32m     11\u001b[39m     (\u001b[33m\"\u001b[39m\u001b[33mhuman\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[38;5;132;01m{dish}\u001b[39;00m\u001b[33mのレシピを教えて\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     12\u001b[39m ])\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m# 実行（パイプでつなぐ）\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/program/python/rag_ai_agent/.venv/lib/python3.13/site-packages/langchain_google_genai/chat_models.py:2263\u001b[39m, in \u001b[36mChatGoogleGenerativeAI.__init__\u001b[39m\u001b[34m(self, **kwargs)\u001b[39m\n\u001b[32m   2256\u001b[39m         suggestion = (\n\u001b[32m   2257\u001b[39m             \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m Did you mean: \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msuggestions[\u001b[32m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m?\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m suggestions \u001b[38;5;28;01melse\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   2258\u001b[39m         )\n\u001b[32m   2259\u001b[39m         logger.warning(\n\u001b[32m   2260\u001b[39m             \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mUnexpected argument \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00marg\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   2261\u001b[39m             \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mprovided to ChatGoogleGenerativeAI.\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msuggestion\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m   2262\u001b[39m         )\n\u001b[32m-> \u001b[39m\u001b[32m2263\u001b[39m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/program/python/rag_ai_agent/.venv/lib/python3.13/site-packages/langchain_core/load/serializable.py:116\u001b[39m, in \u001b[36mSerializable.__init__\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m    114\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, *args: Any, **kwargs: Any) -> \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    115\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\"\"\"\u001b[39;00m  \u001b[38;5;66;03m# noqa: D419  # Intentional blank docstring\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m116\u001b[39m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/program/python/rag_ai_agent/.venv/lib/python3.13/site-packages/pydantic/main.py:250\u001b[39m, in \u001b[36mBaseModel.__init__\u001b[39m\u001b[34m(self, **data)\u001b[39m\n\u001b[32m    248\u001b[39m \u001b[38;5;66;03m# `__tracebackhide__` tells pytest and some other tools to omit this function from tracebacks\u001b[39;00m\n\u001b[32m    249\u001b[39m __tracebackhide__ = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m250\u001b[39m validated_self = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m__pydantic_validator__\u001b[49m\u001b[43m.\u001b[49m\u001b[43mvalidate_python\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mself_instance\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    251\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m validated_self:\n\u001b[32m    252\u001b[39m     warnings.warn(\n\u001b[32m    253\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mA custom validator is returning a value other than `self`.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m'\u001b[39m\n\u001b[32m    254\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mReturning anything other than `self` from a top level model validator isn\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt supported when validating via `__init__`.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    255\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mSee the `model_validator` docs (https://docs.pydantic.dev/latest/concepts/validators/#model-validators) for more details.\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    256\u001b[39m         stacklevel=\u001b[32m2\u001b[39m,\n\u001b[32m    257\u001b[39m     )\n",
+      "\u001b[31mValidationError\u001b[39m: 1 validation error for ChatGoogleGenerativeAI\n  Value error, API key required for Gemini Developer API. Provide api_key parameter or set GOOGLE_API_KEY/GEMINI_API_KEY environment variable. [type=value_error, input_value={'model': 'gemini-2.0-fla...01', 'model_kwargs': {}}, input_type=dict]\n    For further information visit https://errors.pydantic.dev/2.12/v/value_error"
+     ]
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n",
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "\n",
+    "# 準備\n",
+    "llm = ChatGoogleGenerativeAI(model=\"gemini-2.0-flash-001\")\n",
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", \"あなたは料理の専門家です\"),\n",
+    "    (\"human\", \"{dish}のレシピを教えて\")\n",
+    "])\n",
+    "\n",
+    "# 実行（パイプでつなぐ）\n",
+    "chain = prompt | llm\n",
+    "result = chain.invoke({\"dish\": \"カレー\"})\n",
+    "print(result.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bb6aac7",
    "metadata": {},
    "outputs": [],
    "source": []
